--- a/nextjs/src/app/globals.css
+++ b/nextjs/src/app/globals.css
@@ -2,32 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* base styles */
+body{
+ @apply bg-primary text-white
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+main {
+  @apply container mx-auto p-4;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+/* nav styles */
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+nav {
+  @apply bg-gray-700 text-white p-4 flex justify-between items-center;
+}
+nav a {
+  @apply p-4;
 }
